# ooo

./: .gitignore
Tibia/silnik/canary/: CMakeLists.txt  add_include_guards.sh  dodaj_brakujace_includes.sh  lista_plikow.txt  vcpkg.json
Tibia/silnik/canary/src/: canary_server.cpp  canary_server.hpp  canary_server.hpp.bak  core.hpp  core.hpp.bak  declarations.hpp  declarations.hpp.bak  main.cpp  pch.hpp  pch.hpp.bak
Tibia/silnik/canary/src/account/: account.cpp  account.hpp  account.hpp.bak  account_info.hpp  account_info.hpp.bak  account_repository.cpp  account_repository.hpp  account_repository.hpp.bak  account_repository_db.cpp  account_repository_db.hpp  account_repository_db.hpp.bak
Tibia/silnik/canary/src/config/: config_enums.hpp  config_enums.hpp.bak  configmanager.cpp  configmanager.hpp  configmanager.hpp.bak
Tibia/silnik/canary/src/creatures/: creature.cpp  creature.hpp  creature.hpp.bak  creatures_definitions.hpp  creatures_definitions.hpp.bak
Tibia/silnik/canary/src/creatures/combat/: combat.cpp  combat.hpp  combat.hpp.bak  condition.cpp  condition.hpp  condition.hpp.bak  spells.cpp  spells.hpp  spells.hpp.bak
Tibia/silnik/canary/src/creatures/interactions/: chat.cpp  chat.hpp  chat.hpp.bak
Tibia/silnik/canary/src/creatures/npcs/: npc.cpp  (+5 more)
Tibia/silnik/canary/src/database/: database.cpp  database.hpp  database.hpp.bak  database_definitions.hpp  database_definitions.hpp.bak  databasemanager.cpp  databasemanager.hpp  databasemanager.hpp.bak  databasetasks.cpp  databasetasks.hpp  databasetasks.hpp.bak
Tibia/silnik/canary/src/enums/: account_coins.hpp  account_coins.hpp.bak  account_errors.hpp  account_errors.hpp.bak  account_group_type.hpp  account_group_type.hpp.bak  account_type.hpp  account_type.hpp.bak  forge_conversion.hpp  forge_conversion.hpp.bak  item_attribute.hpp  item_attribute.hpp.bak  lua_variant_type.hpp  lua_variant_type.hpp.bak  object_category.hpp  object_category.hpp.bak  player_blessings.hpp  player_blessings.hpp.bak  player_cyclopedia.hpp  player_cyclopedia.hpp.bak  player_icons.hpp  player_icons.hpp.bak  player_wheel.hpp  player_wheel.hpp.bak
Tibia/silnik/canary/src/game/: CMakeLists.txt  game.cpp  game.hpp  game.hpp.bak  game_definitions.hpp  game_definitions.hpp.bak
Tibia/silnik/canary/src/io/: CMakeLists.txt  fileloader.cpp  fileloader.hpp  fileloader.hpp.bak  filestream.cpp  filestream.hpp  filestream.hpp.bak  io_bosstiary.cpp  io_bosstiary.hpp  io_bosstiary.hpp.bak  io_definitions.hpp  io_definitions.hpp.bak  io_wheel.cpp  io_wheel.hpp  io_wheel.hpp.bak  iobestiary.cpp  iobestiary.hpp  iobestiary.hpp.bak  ioguild.cpp  ioguild.hpp  ioguild.hpp.bak  iologindata.cpp  iologindata.hpp  iologindata.hpp.bak  iomap.cpp  iomap.hpp  iomap.hpp.bak  iomapserialize.cpp  iomapserialize.hpp  iomapserialize.hpp.bak  iomarket.cpp  iomarket.hpp  iomarket.hpp.bak  ioprey.cpp  ioprey.hpp  ioprey.hpp.bak
Tibia/silnik/canary/src/items/: CMakeLists.txt  bed.cpp  bed.hpp  bed.hpp.bak  cylinder.cpp  cylinder.hpp  cylinder.hpp.bak  item.cpp  item.hpp  item.hpp.bak  items.cpp  items.hpp  items.hpp.bak  items_classification.hpp  items_classification.hpp.bak  items_definitions.hpp  items_definitions.hpp.bak  thing.cpp  thing.hpp  thing.hpp.bak  tile.cpp  tile.hpp  tile.hpp.bak  trashholder.cpp  trashholder.hpp  trashholder.hpp.bak
Tibia/silnik/canary/src/kv/: README.md  kv.cpp  kv.hpp  kv.hpp.bak  kv_definitions.hpp  kv_definitions.hpp.bak  kv_sql.cpp  kv_sql.hpp  kv_sql.hpp.bak  value_wrapper.cpp  value_wrapper.hpp  value_wrapper.hpp.bak  value_wrapper_proto.cpp  value_wrapper_proto.hpp  value_wrapper_proto.hpp.bak
Tibia/silnik/canary/src/lib/: CMakeLists.txt
Tibia/silnik/canary/src/lua/: CMakeLists.txt  lua_definitions.hpp  lua_definitions.hpp.bak
Tibia/silnik/canary/src/map/: CMakeLists.txt  map.cpp  map.hpp  map.hpp.bak  map_const.hpp  map_const.hpp.bak  map_definitions.hpp  map_definitions.hpp.bak  mapcache.cpp  mapcache.hpp  mapcache.hpp.bak  spectators.cpp  spectators.hpp  spectators.hpp.bak  town.hpp  town.hpp.bak
Tibia/silnik/canary/src/protobuf/: appearances.proto  kv.proto
Tibia/silnik/canary/src/security/: argon.cpp  argon.hpp  argon.hpp.bak  rsa.cpp  rsa.hpp  rsa.hpp.bak
Tibia/silnik/canary/src/server/: server.cpp  server.hpp  server.hpp.bak  server_definitions.hpp  server_definitions.hpp.bak  signals.cpp  signals.hpp  signals.hpp.bak
Tibia/silnik/canary/src/utils/: arraylist.hpp  arraylist.hpp.bak  benchmark.hpp  benchmark.hpp.bak  const.hpp  const.hpp.bak  counter_pointer.cpp  counter_pointer.hpp  counter_pointer.hpp.bak  definitions.hpp  definitions.hpp.bak  hash.hpp  hash.hpp.bak  lockfree.hpp  lockfree.hpp.bak  object_pool.hpp  object_pool.hpp.bak  pugicast.cpp  pugicast.hpp  pugicast.hpp.bak  simd.hpp  simd.hpp.bak  tools.cpp  tools.hpp  tools.hpp.bak  transparent_string_hash.hpp  transparent_string_hash.hpp.bak  utils_definitions.hpp  utils_definitions.hpp.bak  vectorset.hpp  vectorset.hpp.bak  vectorsort.hpp  vectorsort.hpp.bak  wildcardtree.cpp  wildcardtree.hpp  wildcardtree.hpp.bak
Tibia/silnik/canary/tests/fixture/: injection_fixture.hpp
(+468 files in other folders)
